--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 
   <body>
     <div class="container">
+      <header>
+        <div class="header-nav">
+          <img src="img\lambda-black.png" alt="lambda-logo" />
+          <nav>
+            <a class="top-nav" href="">Home</a>
+            <a class="top-nav" href="">About</a>
+            <a class="top-nav" href="">Products</a>
+            <a class="top-nav" href="">Blog</a>
+            <a class="top-nav" href="">Contact</a>
+          </nav>
+        </div>
+      </header>
+      <img class="img-road" src="img/jumbo.jpg" alt="roadway" />
       <section class="top-content">
         <div class="text-container">
           <h2>The Future</h2>
