about.html layout done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="img\lambda-black.png" alt="lambda-logo" />
           <nav>
             <a class="top-nav" href="">Home</a>
-            <a class="top-nav" href="">About</a>
+            <a class="top-nav" href="about.html">About</a>
             <a class="top-nav" href="">Products</a>
             <a class="top-nav" href="">Blog</a>
             <a class="top-nav" href="">Contact</a>
