--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <div class="header-nav">
           <img src="img\lambda-black.png" alt="lambda-logo" />
           <nav>
-            <a class="top-nav" href="">Home</a>
+            <a class="top-nav" href="index.html">Home</a>
             <a class="top-nav" href="about.html">About</a>
             <a class="top-nav" href="">Products</a>
             <a class="top-nav" href="">Blog</a>
@@ -49,7 +49,7 @@
               Iterative approaches to corporate strategy foster collaborative
               thinking to further the overall value proposition.
             </p>
-            <button>Learn More</button>
+            <button class="about-learn">Learn More</button>
           </div>
 
           <div class="blurbs">
@@ -60,7 +60,7 @@
               Iterative approaches to corporate strategy foster collaborative
               thinking to further the overall value proposition.
             </p>
-            <button>Learn More</button>
+            <button class="about-learn">Learn More</button>
           </div>
 
           <div class="blurbs">
@@ -77,7 +77,7 @@
               Iterative approaches to corporate strategy foster collaborative
               thinking to further the overall value proposition.
             </p>
-            <button>Learn More</button>
+            <button class="about-learn">Learn More</button>
           </div>
 
           <div class="blurbs">
@@ -92,7 +92,7 @@
               Iterative approaches to corporate strategy foster collaborative
               thinking to further the overall value proposition.
             </p>
-            <button>Learn More</button>
+            <button class="about-learn">Learn More</button>
           </div>
         </div>
 
