MVP complete, small changes made to better match design file

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
       <header>
         <div class="header-nav">
           <img src="img\lambda-black.png" alt="lambda-logo" />
-          <nav>
-            <a class="top-nav" href="">Home</a>
-            <a class="top-nav" href="about.html">About</a>
-            <a class="top-nav" href="">Products</a>
-            <a class="top-nav" href="">Blog</a>
-            <a class="top-nav" href="">Contact</a>
-          </nav>
+          <div class="navbar">
+            <nav>
+              <a class="top-nav" href="index.html">Home</a>
+              <a class="top-nav" href="about.html">About</a>
+              <a class="top-nav" href="">Products</a>
+              <a class="top-nav" href="">Blog</a>
+              <a class="top-nav" href="">Contact</a>
+            </nav>
+          </div>
         </div>
       </header>
       <img class="img-road" src="img/jumbo.jpg" alt="roadway" />
